# hagl

./: .astylerc  .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODING_STANDARDS.md  Kconfig  LICENSE  LICENSE.txt  README.md  bitmap.c  bitmap.h  blit.c  blit.h  clip.c  clip.h  cohen-sutherland.c  cohen_sutherland.c  cohen_sutherland.h  color.c  color.h  component.mk  config.h  copepod.c  copepod.h  copepod_hal_fb.c  copepod_hal_fb.h  copepod_ll_fb.c  copepod_ll_fb.h  esp-ili9341-framebuffer.c  esp-ili9341-framebuffer.h  font8x8.h  font8x8_basic.h  fontx2.c  fps.c  fps.h  framebuffer.c  framebuffer.h  hagl.c  hsl.c  (+11 more)
.github/workflows/: ccpp.yml  codeql-buildscript.sh
include/: aps.h  backend.h  bitmap.h  clip.h  color.h  config.h  copepod.h  font5x7-ISO8859-1.h  font5x7.h  font5x8-ISO8859-1.h  font5x8.h  font6x9-ISO8859-1.h  font6x9.h  fontx.h  fontx2.h  fps.h  hagl.h  hsl.h  hsv.h  rgb332.h  rgb565.h  rgb888.h  surface.h  tjpgd.h  window.h
include/hagl/: backend.h  bitmap.h  blit.h  char.h  circle.h  clip.h  color.h  ellipse.h  hline.h  image.h  line.h  pixel.h  polygon.h  rectangle.h  surface.h  triangle.h  vline.h  window.h
src/: bitmap.c  clip.c  fontx.c  fontx2.c  hagl.c  hagl_bitmap.c  hagl_blit.c  hagl_char.c  hagl_circle.c  hagl_clip.c  hagl_color.c  hagl_ellipse.c  hagl_hline.c  hagl_image.c  hagl_line.c  hagl_pixel.c  hagl_polygon.c  hagl_rectangle.c  hagl_triangle.c  hagl_vline.c  hsl.c  hsv.c  rgb565.c  rgb888.c  tjpgd.c
tests/: Makefile  crc32.h  hagl_hal.c  hagl_hal.h  hagl_hal_color.h  save_image.c  save_image.h  stb_image_write.h  test_aps.c  test_blit.c  test_char.c  test_circle.c  test_clip.c  test_color.c  test_ellipse.c  test_fill_ellipse.c  test_fill_polygon.c  test_fill_rectangle.c  test_fontx.c  test_fps.c  test_hline.c  test_line.c  test_pixel.c  test_polygon.c  test_rectangle.c  test_vline.c
